--- a/notes.tex
+++ b/notes.tex
@@ -22,7 +22,11 @@ To whom this may concern, these are some notes for CISC203,
 a course I took in the fall of 2025. 
 I am writing these notes for my own benefit, 
 and I make no claims about their accuracy or completeness. 
+Additionally, as of 9/17/2025 2:49AM, some of this was edited by copilot so I cannot guarantee the accuracy as well as relevance to the course
 Use at your own risk.
+\\
+I will continue to edit these notes as the course goes on as well as verify the accuracy of the content.
+
 
 ps on 09/16/2025, I was intoxicated while writing these notes :3
 
