added issue thing

--- a/notes.tex
+++ b/notes.tex
@@ -29,8 +29,11 @@ I will continue to edit these notes as the course goes on as well as verify the 
 
 
 ps on 09/16/2025, I was intoxicated while writing these notes :3
-
+\\
 Check me out at \url{https://github.com/andrewSmellz}
+\\
+If you find any issues, please report them in the \href{https://github.com/andrewSmellz/cisc203/issues}{Issues section} of the repository.
+
 
 \tableofcontents
 \newpage
